tests/fixtures/github/errors/malformed_body.http
HTTP/2.0 200 OK
Content-Type: application/json; charset=utf-8
Date: Fri, 01 Jan 2027 00:00:00 GMT
X-Github-Api-Version-Selected: 2022-11-28
X-Ratelimit-Limit: 5000
X-Ratelimit-Remaining: 4999
X-Ratelimit-Reset: 1893456000

[
  {
    "number": 1,
    "title": "truncated mid-record",
    "body": "the response stream cut off here -
